fixed overlapping cursor

--- a/indexStyle.css
+++ b/indexStyle.css
@@ -11,6 +11,7 @@ body
     min-width: available;
     min-height: available;
     position: fixed;*/
+    cursor: none;
 }
 .backgroundImg
 {
